--- a/templates/semestre/tabla.html
+++ b/templates/semestre/tabla.html
@@ -45,7 +45,7 @@
             </div>
             <div class="modal-body">
               <div class="d-flex flex-column align-items-center container-fluid p-4">
-                <input type="hidden" name="idSemestre" id="idrecibir">
+                <input type="hidden" name="idSemestre" >
                 <div class="d-flex col-12 align-items-center mb-2 justify-content-center p-3">
                   <div class="col">
                     <label for="nombreSe" class="form-label">Nombre de semestre:</label>
@@ -103,7 +103,7 @@
     </div>
   </div>
 </div>
-</div>
+
 
 {% endfor %}
 
