--- a/templates/semestre/ListarSemestre.html
+++ b/templates/semestre/ListarSemestre.html
@@ -23,23 +23,20 @@
       <option id="value2" value="10">10</option>
       <option id="value3" value="15">15</option>
     </select>
-  
-   
-  
-    <span>         </span>
+
+
+
+    <span> </span>
     <button id='atras' class='previous btn btn-success' type='button'>
       <span class="glyphicon glyphicon-chevron-left">&lt;</span>
     </button>
-    
-      <span > Página </span>
-      <span id="contador" value="0">1</span>
-   
+
+    <span> Página </span>
+    <span id="contador" value="0">1</span>
+    <input type="hidden" value={{cant[0]}} id="cant">
     <button id='adelante' class='next btn btn-success chevron-right' type='button'>
       <span class="glyphicon glyphicon-chevron-right">&gt;</span>
     </button>
-    
-    
-  <hr>
   </div>
   <div id="contenido-dinamico">
     <div class="table p-5">
@@ -57,30 +54,29 @@
         </thead>
         <tbody id="tabla">
           {% for semestre in semestres %}
-          <tr class="container text-center" >
+          <tr class="container text-center">
             <td class="infoTabla" scope="row align-items-center">{{semestre[1]}}</td>
             <td scope="row align-items-center" id="fecha1">{{semestre[2]}}</td>
             <td scope="row align-items-center" id="fecha2">{{semestre[3]}}</td>
             <td scope="row align-items-center" id="estado">{{semestre[4]}}</td>
-            <td scope="row align-items-center"><button style="border: none;" type="button" data-bs-toggle="modal" 
-                data-bs-target="#exampleModal1" type="button" onclick="enviar_modal('{{semestre[0]}}')"><img style="width: 30px; height: 30px;"
-                  src="{{url_for('static', filename='lapiz-rojo.png')}}" alt=""></button>
+            <td scope="row align-items-center"><button style="border: none;" type="button" data-bs-toggle="modal"
+                data-bs-target="#exampleModal1" type="button" onclick="cargarSemestreEditar('{{semestre[0]}}', '{{semestre[1]}}', '{{semestre[2]}}', '{{semestre[3]}}', '{{semestre[4]}}')"><img
+                  style="width: 30px; height: 30px;" src="{{url_for('static', filename='lapiz-rojo.png')}}"
+                  alt=""></button>
             <td scope="row align-items-center">
               <button style="border: none;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
                 onclick="enviar_modal('{{semestre[0]}}')"><img style="width: 30px; height: 30px;"
                   src="{{url_for('static', filename='basura-rojo.png')}}" alt=""></button>
             </td>
-            <td  scope="row align-items-center">
-                <input type="hidden" name="id" value="{{semestre[0]}}">
-                
+            <td scope="row align-items-center">
+              <input type="hidden" name="id" value="{{semestre[0]}}">
             </td>
-       
-            
-          </tbody>
+        </tbody>
     </div>
-    <form  action="{{ url_for('actualizar_semestre') }}" class="formulario" method="POST">
+    <form action="{{ url_for('actualizar_semestre') }}" class="formulario" method="POST">
       <div class="modal-dialog modal-dialog-centered">
-        <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+        <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1"
+          aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
@@ -89,28 +85,28 @@
               </div>
               <div class="modal-body">
                 <div class="d-flex flex-column align-items-center container-fluid p-4">
-                  <input type="hidden" name="idSemestre" id="idrecibir">
+                  <input type="hidden" name="idSemestre" id="idEditar">
                   <div class="d-flex col-12 align-items-center mb-2 justify-content-center p-3">
                     <div class="col">
                       <label for="nombreSe" class="form-label">Nombre de semestre:</label>
                     </div>
                     <div class="col">
-                      <input type="text" class="form-control" name="nombreSe" value="{{semestre[1] }}">
+                      <input id="edit1" type="text" class="form-control" name="nombreSe"/>
                     </div>
                   </div>
                   <div class="mb-3">
                     <label class="me-4">Fecha inicial:
-                      <input class="ms-1" type="text" name="fechaI" value="{{ semestre[2] }}" />
+                      <input id="edit2" class="ms-1" type="date" name="fechaI" />
                     </label>
                     <label class="ms-5">
                       Fecha final:
-                      <input class="ms-1" type="text" name="fechaF" value="{{ semestre[3] }}" />
+                      <input id="edit3" class="ms-1" type="date" name="fechaF" />
                     </label>
                   </div>
                   <div class="col-12 p-3">
-                    <select id="estado" name="estado">
-                      <option>No vigente</option>
-                      <option>Vigente</option>
+                    <select id="edit4" name="estado">
+                      <option value="No vigente">No vigente</option>
+                      <option value="Vigente">Vigente</option>
                     </select>
                   </div>
                 </div>
@@ -137,9 +133,9 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-              <form action="{{ url_for('eliminar_semestre') }}" method="POST">
-                <input type="hidden" id="idrecibir" name="id" >
-                <button class="btn btn-success">Eliminar</button>
+              <form action="{{url_for('eliminar_semestre')}}" method="POST">
+                <input type="hidden" id="idrecibir" name="id">
+                <button class="btn btn-success" type="submit">Eliminar - <p id="idP"></p></button>
               </form>
             </div>
           </div>
@@ -148,12 +144,12 @@
     </div>
     {% endfor %}
   </div>
-  
-  
-  </div>
 
 
-  
+</div>
+
+
+
 
 
 </div>
